# ThorDev

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Jamroot.jam  PreLoad.cmake  README.md  ThorDev.code-workspace  build.jam  generate_mocks.py  pyproject.toml  thor_clangformat.json  thor_clangformat.py  thor_cppcheck.json  thor_cppcheck.py
cmake/: embedded_targets.cmake  generic_targets.cmake
dev/: main.cpp
dev/VGDBTemplates/: Thor_STM32F446RE.vgdbxpt  Thor_STM32F446RE_TinyEmbeddedTest.vgdbxpt  Thor_STM32F767ZI_FreeRTOS_TinyEmbeddedTest.vgdbxpt
dev/VisualStudio/C++LanguageCompatibility/: .gitignore  Thor.sln
dev/VisualStudio/C++LanguageCompatibility/stm32f4/: stm32.xml  stm32f4  stm32f4-F4-Debug-C++11.vgdbsettings  stm32f4-F4-Debug-C++17.vgdbsettings  stm32f4-F4-Release-C++11.vgdbsettings  stm32f4.vcxproj  stm32f4.vcxproj.filters
dev/VisualStudio/C++LanguageCompatibility/stm32f7/: stm32.props  stm32.xml  stm32f7-F7-Debug-C++17.vgdbsettings  stm32f7-F7-Release-C++11.vgdbsettings  stm32f7.vcxproj  stm32f7.vcxproj.filters
dev/VisualStudio/ChimeraIntegration/: ChimeraIntegration.sln
dev/VisualStudio/ChimeraIntegration/ChimeraIntegration/: ChimeraIntegration.vcxproj  ChimeraIntegration.vcxproj.filters
dev/VisualStudio/Embedded/: .gitignore
dev/VisualStudio/Embedded/Compile/STM32F7/: STM32F7.sln
dev/VisualStudio/Embedded/Compile/STM32H7/: STM32H7.sln
dev/VisualStudio/Embedded/EthernetDriverF4/: EthernetDriverF4.sln
dev/VisualStudio/Embedded/EthernetDriverF4/EthernetDriverF4/: EthernetDriverF4-Debug.vgdbsettings  EthernetDriverF4-Release.vgdbsettings  EthernetDriverF4.vcxproj  EthernetDriverF4.vcxproj.filters  main.cpp  stm32.props  stm32.xml
dev/VisualStudio/Embedded/GTest_SPI_F446RE/: GTest_SPI_F446RE.sln
dev/VisualStudio/Embedded/GTest_SPI_F446RE/GTest_SPI_F446RE/: GTest_SPI_F446RE-Debug.vgdbsettings  GTest_SPI_F446RE-Release.vgdbsettings  GTest_SPI_F446RE.vcxproj  GTest_SPI_F446RE.vcxproj.filters  stm32.props  stm32.xml
dev/VisualStudio/Embedded/GTest_SystemFlash_F446RE/: GTest_SystemFlash_F446RE.sln
dev/VisualStudio/Embedded/GTest_SystemFlash_F446RE/GTest_SystemFlash_F446RE/: GTest_SystemFlash_F446RE-Debug.vgdbsettings  GTest_SystemFlash_F446RE-Release.vgdbsettings  GTest_SystemFlash_F446RE.cpp  GTest_SystemFlash_F446RE.vcxproj  GTest_SystemFlash_F446RE.vcxproj.filters  stm32.props  stm32.xml
dev/VisualStudio/Embedded/Test_UART_F767ZI/: Test_UART_F767ZI.sln
dev/VisualStudio/Embedded/Test_UART_F767ZI/Test_UART_F767ZI/: LEDBlink.cpp  Test_UART_F767ZI-Debug.vgdbsettings  Test_UART_F767ZI-Release.vgdbsettings  Test_UART_F767ZI.vcxproj  Test_UART_F767ZI.vcxproj.filters  stm32.props  stm32.xml
dev/VisualStudio/MSVC/WindowsDevelopment/: WindowsDevelopment.sln
dev/VisualStudio/MSVC/WindowsDevelopment/WindowsDevelopment/: WindowsDevelopment.vcxproj  WindowsDevelopment.vcxproj.filters  main.cpp  (+2 more)
dev/doxygen/: Doxyfile
dev/examples/: uart_basic_example.cpp
dev/testing/peripherals/UART/: Makefile  Notes.txt  eRPC_Test.py  test.json  test_uart.py
doc/: Doxyfile
doc/CANDevelopment/: BitRateRegisterCalculations.xlsx
mock/: CMakeLists.txt
mock/Thor/lld/common/cortex-m4/: CMakeLists.txt  interrupts_expect.cpp  interrupts_expect.hpp  interrupts_mock.cpp
mock/Thor/lld/interface/sdio/: CMakeLists.txt  sdio_driver_expect.cpp  sdio_driver_expect.hpp  sdio_driver_mock.cpp  sdio_intf_expect.cpp  sdio_intf_expect.hpp  sdio_intf_mock.cpp
mock/config/: CppUMockGenConfig.hpp  root.cfg
sandbox/: CMakeLists.txt
sandbox/stm32l4_usb_development/: CMakeLists.txt  main.cpp  usb_driver.cpp  usb_driver.hpp
tests/: CMakeLists.txt
tests/archive/can/: can_test_fixture.hpp
tests/archive/hardware/harness/: CMakeLists.txt  blinky.hpp  logger.cpp  logger.hpp  serial_output.cpp
tests/archive/hardware/integration/: CMakeLists.txt
tests/config/bsp/: orbit_esc_v3.hpp
tests/config/chimera/: chimera_cfg_prj.hpp
tests/config/cpputest/: cpputest_config_prj.hpp
tests/config/thor/: thor_user_config.hpp
tests/embedded/: README.md  build.jam
tests/embedded/spi/: spi_main.cpp  spi_test.cpp
tests/embedded/system_flash/: system_flash_main.cpp  system_flash_test.cpp
tests/fixtures/: thor_test_fixtures.cpp  thor_test_fixtures.hpp
tests/hardware/: test_lfs_integration.cpp
tests/hardware/harness/: CMakeLists.txt  blinky.cpp  serial_output.hpp
tests/hardware/integration/: CMakeLists.txt
tests/hardware/integration/adc/: CMakeLists.txt  test_hld_adc_hw.cpp
tests/hardware/integration/can/: CMakeLists.txt  can.ini  can_driver_integration_tests.py  echo_test.cpp  echo_test.hpp  test_entry.cpp  test_hld_can_hw.cpp
tests/hardware/integration/gpio/: CMakeLists.txt  test_button_press.cpp  test_entry.cpp
tests/hardware/integration/gpio/button_press/: CMakeLists.txt  test_button_press.cpp
tests/hardware/peripherals/: CMakeLists.txt
tests/hardware/peripherals/stm32l4/: test_stm32l4_lld_can.cpp
tests/hardware/peripherals/stm32l4/can/: CMakeLists.txt  test_driver_implementation.cpp  test_driver_interface.cpp  test_resources.cpp  test_resources.hpp
tests/harness/: CMakeLists.txt  mbed_test_harness.cpp  mbed_test_harness.hpp  mbed_test_harness_bsp.hpp  mbed_test_harness_cfg.hpp  mbed_test_harness_intf.hpp
tests/integration/sdio/: CMakeLists.txt  sdio_integration_test.cpp
tests/module/hld/: CMakeLists.txt
tests/module/hld/sdio/: CMakeLists.txt  test_hld_sdio.cpp
tests/module/lld/interface/sdio/: CMakeLists.txt  test_lld_intf_sdio.cpp
tests/module/lld/stm32f4x/sdio/: CMakeLists.txt  test_lld_sdio.cpp
tests/software/can/: CMakeLists.txt  main.cpp  test_driver.cpp  test_hld_can_chimera.cpp  test_hld_can_driver.cpp  test_hld_can_module.cpp
tools/: gen_lld_boilerplate.py
tools/generators/lld_templates/: bp_boost.py  bp_common.py  bp_driver.py  bp_mapping.py  bp_project.py  bp_test.py  bp_types.py  bp_variant.py
vs/test/: ProjectWideConfiguration.props
vs/test/hld/HLDTests/: HLDTests.sln  ProjectWideConfiguration.props
vs/test/lld/InterfaceTests/: InterfaceTests.sln  ProjectWideConfiguration.props
(+107 files in other folders)
